syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "/user";

service UserService{
  rpc CreateUser(CreateUserRequest) returns  (CreateUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns  (UpdateUserResponse) {};
  rpc VerifyEmail(VerifyEmailRequest) returns  (VerifyEmailResponse) {};
}

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3;
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message VerifyEmailRequest {
  int64 email_id = 1;
  string secret_code = 2;
}

message VerifyEmailResponse {
  bool is_verified = 1;
}